<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.kandy.starter.APISettingsActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings_key_api_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/activity_settings_current_api_key_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings_secret_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/activity_settings_current_api_secret_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/activity_settings_current_api_key_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:ems="10"
                android:hint="@string/activity_api_settings_set_api_key_edit_hint">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/activity_settings_set_api_key_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@drawable/chat_action_btn_selector"
                android:text="@string/activity_api_settings_set_api_key_button_label"
                android:layout_margin="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/activity_settings_current_api_secret_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:ems="10"
                android:hint="@string/activity_api_settings_set_api_secret_edit_hint" />

            <Button
                android:id="@+id/activity_settings_set_api_secret_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:layout_margin="2dp"
                android:background="@drawable/chat_action_btn_selector"
                android:text="@string/activity_api_settings_set_api_secret_button_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/activity_settings_host_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:ems="10"
                android:hint="@string/activity_api_settings_set_kandy_host_edit_hint" />

            <Button
                android:id="@+id/activity_settings_set_host_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@drawable/chat_action_btn_selector"
                android:layout_margin="2dp"
                android:text="@string/activity_api_settings_set_kandy_host_button_label" />
        </LinearLayout>
        <CheckedTextView 
            android:id="@+id/activity_settings_enable_power_saving"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/activity_api_settings_set_kandy_power_saver_enabled"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/activity_settings_config_report_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>