<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
		android:layout_weight="1">
		<ListView
			android:id="@+id/activity_cloud_storage_cloud_list_view"
			android:layout_width="match_parent" 
			android:layout_height="match_parent"
			 />
		<TextView android:id="@android:id/empty"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/cloud_storage_empty_target"
			android:gravity="center" />
	</RelativeLayout>
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    >
     <Button
            android:id="@+id/activity_cloud_storage_upload_button"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/chat_action_btn_selector"
            android:gravity="left|center_vertical"
            android:drawableLeft="@drawable/ic_action_upload" 
            android:text="@string/action_cloud_storage_upload"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            
            />
     <Button
            android:id="@+id/activity_cloud_storage_download_button"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/chat_action_btn_selector"
            android:drawableLeft="@drawable/ic_action_download" 
            android:text="@string/action_cloud_storage_download"
            android:layout_marginRight="15dp"
            android:gravity="left|center_vertical"/>
     |
</LinearLayout>
<ListView 
    android:id="@+id/activity_cloud_storage_local_files_list_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    />
</LinearLayout>
